[package]
name = "fireship-io-crypto-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
scrypt = "0.10.0"
argon2 = "0.4"
hex = "0.4"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0"
