[package]
name = "fireship-io-crypto-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.1"
cbc = "0.1.2"
hex = "0.4"
hmac = "0.12.1"
scrypt = "0.10.0"
serde = { version = "1.0.136", features = ["derive"]}
serde_json = "1.0"
sha2 = "0.10.2"
